feat: Ajuese nas classe e DTOs