@@ -1,6 +1,6 @@
 package com.main.CrediLink.sippulse.utils;
 
-import com.main.CrediLink.sippulse.dto.AccountCreditDTO;
+import com.main.CrediLink.sippulse.dto.AccountCreditsDTO;
 
 import java.math.BigDecimal;
 import java.text.DecimalFormat;
@@ -25,15 +25,17 @@ public class AccountCreditFormatter {
      * Recebe uma lista de strings no formato "accountCode,credito"
      * e retorna lista de AccountCreditDTO com credito formatado.
      */
-    public static List<AccountCreditDTO> formatAccountCredits(List<String> rawAccounts) {
-        return rawAccounts.stream()
+    public static AccountCreditsDTO formatAccountCredits(List<String> rawAccounts) {
+        List<AccountCreditsDTO.AccountCreditDTO> accounts = rawAccounts.stream()
                 .map(entry -> {
                     String[] parts = entry.split(",");
-                    String accountCode = parts[0];
-                    BigDecimal credito = new BigDecimal(parts[1]);
+                    String accountCode = parts[0].trim();
+                    BigDecimal credito = new BigDecimal(parts[1].trim());
                     String creditoFormatado = decimalFormat.format(credito);
-                    return new AccountCreditDTO(accountCode, creditoFormatado);
+                    return new AccountCreditsDTO.AccountCreditDTO(accountCode, creditoFormatado);
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        return new AccountCreditsDTO(accounts);
     }
 }
